[package]
name = "caesar"
version = "0.1.0"
edition = "2018"
authors = ["lxgr <lxgr@protonmail.com>"]
description = "A small program to de/en-crypt with the caesar procedure."
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
